# wiredtiger-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.claude/: settings.local.json
crates/wiredtiger/: Cargo.toml
crates/wiredtiger-tests/: Cargo.toml
crates/wiredtiger-tests/src/: lib.rs
crates/wiredtiger/libwiredtiger/: Cargo.toml  build.rs
crates/wiredtiger/src/: config.rs  lib.rs  raw_api.rs
crates/wiredtiger/wiredtiger-sys/: Cargo.toml  build.rs
libwiredtiger/: build.rs
src/: connection.rs  cursor.rs  error.rs  lib.rs  main.rs  raw_api.rs  session.rs
