[package]
name = "wiredtiger"
version = "11.2.0-1"
edition = "2021"
authors = ["Tyler Brock", "Mike O'Brien"]
description = "Rust bindings for WiredTiger"
repository = "https://github.com/TylerBrock/wiredtiger-rust"
keywords = [ "wiredtiger", "mongodb", "database" ]

[workspace]
members = ["libwiredtiger"]

[build-dependencies]
bindgen = "0.69.4"
