[package]
name = "wiredtiger"
version = "11.2.0-2"
edition = "2021"
authors = ["Tyler Brock", "Mike O'Brien"]
repository = "https://github.com/TylerBrock/wiredtiger-rust"
keywords = [ "wiredtiger", "mongodb", "database" ]

[lib]
proc-macro = true

[dependencies]
libc = "0.2"
libwiredtiger = { path = "libwiredtiger" }

[dev-dependencies]
tempfile = "3"
assert_ok = "1.0.2"

